--- a/hw3/notebooks/baseline_metrics.ipynb
+++ b/hw3/notebooks/baseline_metrics.ipynb
@@ -66,13 +66,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10499/10499 [00:08<00:00, 1251.17it/s]\n"
+      "100%|██████████| 10499/10499 [00:09<00:00, 1166.47it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Building sparse matrix for ranking...\n",
+      "Matrix built: 10499 docs x 364893 terms\n",
       "Evaluating...\n"
      ]
     },
@@ -80,7 +82,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 500/500 [01:59<00:00,  4.17it/s]"
+      "100%|██████████| 500/500 [02:04<00:00,  4.00it/s]"
      ]
     },
     {
@@ -89,8 +91,8 @@
      "text": [
       "\n",
       "Result Metrics:\n",
-      "MRR@10:  0.5531\n",
-      "NDCG@10: 0.5735\n"
+      "MRR@10:  0.2929\n",
+      "NDCG@10: 0.3423\n"
      ]
     },
     {
