--- a/hw3/notebooks/baseline_metrics.ipynb
+++ b/hw3/notebooks/baseline_metrics.ipynb
@@ -47,7 +47,7 @@
     }
    ],
    "source": [
-    "aux.download_and_sample(force_reload=False, n_queries=500, n_docs=10000)"
+    "aux.download_and_sample(force_reload=False, n_queries=1000, n_docs=100000)"
    ]
   },
   {
@@ -66,15 +66,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10499/10499 [00:09<00:00, 1166.47it/s]\n"
+      "100%|██████████| 100956/100956 [01:24<00:00, 1193.60it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building sparse matrix for ranking...\n",
-      "Matrix built: 10499 docs x 364893 terms\n",
+      "Building BM25 matrix...\n",
+      "BM25 Matrix built: 100956 docs x 1799422 terms\n",
       "Evaluating...\n"
      ]
     },
@@ -82,7 +82,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 500/500 [02:04<00:00,  4.00it/s]"
+      "100%|██████████| 1000/1000 [07:20<00:00,  2.27it/s] "
      ]
     },
     {
@@ -91,8 +91,8 @@
      "text": [
       "\n",
       "Result Metrics:\n",
-      "MRR@10:  0.2929\n",
-      "NDCG@10: 0.3423\n"
+      "MRR@10:  0.4388\n",
+      "NDCG@10: 0.4570\n"
      ]
     },
     {
@@ -116,17 +116,13 @@
     "for _, row in tqdm(queries_df.iterrows(), total=len(queries_df)):\n",
     "    qid, text = row[\"query_id\"], row[\"text\"]\n",
     "    \n",
-    "    # Пропускаем, если для этого запроса нет правильных ответов в нашей выборке\n",
     "    if qid not in qrels: continue\n",
     "    targets = qrels[qid]\n",
     "    \n",
-    "    # Поиск\n",
     "    results_int = [doc_id for doc_id, _ in searcher.search(text)]\n",
     "    \n",
-    "    # Конвертируем внутренние int ID обратно в строковые ID MS MARCO\n",
     "    results_str = [int_to_str_id[i] for i in results_int]\n",
     "    \n",
-    "    # Считаем метрики\n",
     "    mrr_scores.append(metrics.mrr(results_str, targets, k=10))\n",
     "    ndcg_scores.append(metrics.ndcg(results_str, targets, k=10))\n",
     "\n",
