--- a/hw3/notebooks/baseline_metrics.ipynb
+++ b/hw3/notebooks/baseline_metrics.ipynb
@@ -42,12 +42,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset already exists. Skipping download.\n"
+      "Loading MS MARCO dataset stream...\n",
+      "Sampling 2000 queries...\n",
+      "Filtering qrels...\n",
+      "Sampling 100000 documents (relevant + noise)...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scanning corpus: 3211370it [06:42, 7983.55it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving to CSV...\n",
+      "Done.\n"
      ]
     }
    ],
    "source": [
-    "aux.download_and_sample(force_reload=False, n_queries=1000, n_docs=100000)"
+    "aux.download_and_sample(force_reload=True, n_queries=2000, n_docs=100000)"
    ]
   },
   {
@@ -66,7 +84,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100956/100956 [01:27<00:00, 1149.84it/s]\n"
+      "100%|██████████| 101939/101939 [01:30<00:00, 1129.72it/s]\n"
      ]
     },
     {
@@ -74,7 +92,7 @@
      "output_type": "stream",
      "text": [
       "Building BM25 matrix...\n",
-      "BM25 Matrix built: 100956 docs x 1799422 terms\n",
+      "BM25 Matrix built: 101939 docs x 1813200 terms\n",
       "Evaluating...\n"
      ]
     },
@@ -82,7 +100,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:31<00:00, 32.16it/s]"
+      "100%|██████████| 2000/2000 [00:55<00:00, 36.34it/s]"
      ]
     },
     {
@@ -91,8 +109,8 @@
      "text": [
       "\n",
       "Result Metrics:\n",
-      "MRR@10:  0.4392\n",
-      "NDCG@10: 0.4571\n"
+      "MRR@10:  0.4398\n",
+      "NDCG@10: 0.4588\n"
      ]
     },
     {
