new feature + weights search

--- a/hw3/notebooks/baseline_metrics.ipynb
+++ b/hw3/notebooks/baseline_metrics.ipynb
@@ -52,22 +52,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indexing...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 101937/101937 [01:27<00:00, 1162.74it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "docs_df, queries_df, qrels = aux.load_data()\n",
     "\n",
     "index, int_to_str_id = aux.build_index(docs_df)\n",
     "\n",
-    "searcher = Searcher(index, [1.0, 0])"
+    "searcher = Searcher(index, [1.0, 1.0, 1.0, 1.0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2000/2000 [01:05<00:00, 30.36it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Result Metrics:\n",
+      "MRR@10:  0.4436\n",
+      "NDCG@10: 0.4622\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "mrr_scores = []\n",
     "ndcg_scores = []\n",
@@ -90,124 +137,6 @@
     "print(f\"MRR@10:  {np.mean(mrr_scores):.4f}\")\n",
     "print(f\"NDCG@10: {np.mean(ndcg_scores):.4f}\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**weights experiment**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Indexing...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 101937/101937 [01:19<00:00, 1288.84it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "docs_df, queries_df, qrels = aux.load_data()\n",
-    "\n",
-    "index, int_to_str_id = aux.build_index(docs_df)\n",
-    "\n",
-    "searcher1 = Searcher(index, [1.0, 0])\n",
-    "searcher2 = Searcher(index, [0, 1.0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Evaluating (2 searchers)...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2000/2000 [01:59<00:00, 16.71it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Result Metrics:\n",
-      "Searcher1 | MRR@10:  0.1697 | NDCG@10: 0.2089\n",
-      "Searcher2 | MRR@10:  0.4420 | NDCG@10: 0.4616\n",
-      "\n",
-      "Deltas (Searcher2 - Searcher1):\n",
-      "ΔMRR@10:  0.2723\n",
-      "ΔNDCG@10: 0.2527\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "mrr1, ndcg1 = [], []\n",
-    "mrr2, ndcg2 = [], []\n",
-    "\n",
-    "print(\"Evaluating (2 searchers)...\")\n",
-    "for _, row in tqdm(queries_df.iterrows(), total=len(queries_df)):\n",
-    "    qid, text = row[\"query_id\"], row[\"text\"]\n",
-    "\n",
-    "    if qid not in qrels:\n",
-    "        continue\n",
-    "    targets = qrels[qid]\n",
-    "\n",
-    "    # Searcher 1\n",
-    "    res1_int = [doc_id for doc_id, _ in searcher1.search(text)]\n",
-    "    res1_str = [int_to_str_id[i] for i in res1_int]\n",
-    "    mrr1.append(metrics.mrr(res1_str, targets, k=10))\n",
-    "    ndcg1.append(metrics.ndcg(res1_str, targets, k=10))\n",
-    "\n",
-    "    # Searcher 2\n",
-    "    res2_int = [doc_id for doc_id, _ in searcher2.search(text)]\n",
-    "    res2_str = [int_to_str_id[i] for i in res2_int]\n",
-    "    mrr2.append(metrics.mrr(res2_str, targets, k=10))\n",
-    "    ndcg2.append(metrics.ndcg(res2_str, targets, k=10))\n",
-    "\n",
-    "print(\"\\nResult Metrics:\")\n",
-    "print(f\"Searcher1 | MRR@10:  {np.mean(mrr1):.4f} | NDCG@10: {np.mean(ndcg1):.4f}\")\n",
-    "print(f\"Searcher2 | MRR@10:  {np.mean(mrr2):.4f} | NDCG@10: {np.mean(ndcg2):.4f}\")\n",
-    "\n",
-    "# Optional: paired deltas (same queries)\n",
-    "print(\"\\nDeltas (Searcher2 - Searcher1):\")\n",
-    "print(f\"ΔMRR@10:  {(np.mean(mrr2) - np.mean(mrr1)):.4f}\")\n",
-    "print(f\"ΔNDCG@10: {(np.mean(ndcg2) - np.mean(ndcg1)):.4f}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
