--- a/hw3/notebooks/recall1000.ipynb
+++ b/hw3/notebooks/recall1000.ipynb
@@ -54,6 +54,44 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "def recall_at_candidates(queries_df, qrels, searcher, int_to_str_id, k=1000):\n",
+    "    hits = 0\n",
+    "    total = 0\n",
+    "    cand_sizes = []\n",
+    "\n",
+    "    for _, row in tqdm(queries_df.iterrows(), total=len(queries_df), desc=f\"Recall@{k} (candidates)\"):\n",
+    "        qid, text = int(row[\"query_id\"]), row[\"text\"]\n",
+    "        if qid not in qrels:\n",
+    "            continue\n",
+    "\n",
+    "        target = next(iter(qrels[qid]))\n",
+    "\n",
+    "        cand = searcher.candidates(text)  # Set[int]\n",
+    "        cand_sizes.append(len(cand))\n",
+    "\n",
+    "        if len(cand) > k:\n",
+    "            cand = set(list(sorted(cand))[:k])\n",
+    "\n",
+    "        cand_str = {int_to_str_id[i] for i in cand}\n",
+    "        hits += int(target in cand_str)\n",
+    "        total += 1\n",
+    "\n",
+    "    recall = hits / total if total else 0.0\n",
+    "    print(f\"\\nRecall@{k} (candidate pool): {recall:.4f} ({hits}/{total})\")\n",
+    "    if cand_sizes:\n",
+    "        print(f\"Candidate size: mean={np.mean(cand_sizes):.1f}, median={np.median(cand_sizes):.1f}, p95={np.percentile(cand_sizes, 95):.1f}\")\n",
+    "    return recall\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -66,35 +104,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 101937/101937 [01:30<00:00, 1122.69it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "docs_df, queries_df, qrels = aux.load_data()\n",
-    "\n",
-    "index, int_to_str_id = aux.build_index(docs_df)\n",
-    "\n",
-    "searcher = Searcher(index, [1.0, 1.0, 1.0, 1.0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Evaluating...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2000/2000 [01:22<00:00, 24.13it/s]"
+      "100%|██████████| 101937/101937 [01:27<00:00, 1164.07it/s]\n",
+      "Recall@1000 (candidates): 100%|██████████| 2000/2000 [00:59<00:00, 33.45it/s]"
      ]
     },
     {
@@ -102,9 +113,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Result Metrics:\n",
-      "MRR@10:  0.5783\n",
-      "NDCG@10: 0.6212\n"
+      "Recall@1000 (candidate pool): 0.3455 (691/2000)\n",
+      "Candidate size: mean=2240.8, median=1512.0, p95=5000.0\n"
      ]
     },
     {
@@ -113,29 +123,25 @@
      "text": [
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.3455"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "mrr_scores = []\n",
-    "ndcg_scores = []\n",
+    "docs_df, queries_df, qrels = aux.load_data()\n",
+    "index, int_to_str_id = aux.build_index(docs_df)\n",
     "\n",
-    "print(\"Evaluating...\")\n",
-    "for _, row in tqdm(queries_df.iterrows(), total=len(queries_df)):\n",
-    "    qid, text = row[\"query_id\"], row[\"text\"]\n",
-    "    \n",
-    "    if qid not in qrels: continue\n",
-    "    targets = qrels[qid]\n",
-    "    \n",
-    "    results_int = [doc_id for doc_id, _ in searcher.search(text)]\n",
-    "    \n",
-    "    results_str = [int_to_str_id[i] for i in results_int]\n",
-    "    \n",
-    "    mrr_scores.append(metrics.mrr(results_str, targets, k=10))\n",
-    "    ndcg_scores.append(metrics.ndcg(results_str, targets, k=10))\n",
+    "searcher = Searcher(index, [0.0, 1.0])\n",
     "\n",
-    "print(f\"\\nResult Metrics:\")\n",
-    "print(f\"MRR@10:  {np.mean(mrr_scores):.4f}\")\n",
-    "print(f\"NDCG@10: {np.mean(ndcg_scores):.4f}\")"
+    "recall_at_candidates(queries_df, qrels, searcher, int_to_str_id, k=1000)\n"
    ]
   },
   {
