proximity + new searcher baseline

--- a/hw3/notebooks/baseline_metrics.ipynb
+++ b/hw3/notebooks/baseline_metrics.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,10 @@
     "    sys.path.append(project_root)\n",
     "\n",
     "from minisearch.search import Searcher \n",
-    "from minisearch.index import PositionalIndex\n",
+    "from minisearch.index import PositionalIndex, tokenize\n",
+    "\n",
+    "from minisearch.fast_ranking import FastRanker\n",
+    "from minisearch.quorum import QuorumCandidateGenerator, QuorumConfig\n",
     "\n",
     "import aux\n",
     "import metrics"
@@ -66,21 +69,42 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 101937/101937 [01:38<00:00, 1035.96it/s]\n"
+      "100%|██████████| 101937/101937 [01:28<00:00, 1158.25it/s]\n"
      ]
     }
    ],
    "source": [
+    "# build index\n",
     "docs_df, queries_df, qrels = aux.load_data()\n",
-    "\n",
-    "index, int_to_str_id = aux.build_index(docs_df)\n",
-    "\n",
-    "searcher = Searcher(index, [1.0, 1.0, 1.0, 1.0])"
+    "index, int_to_str_id = aux.build_index(docs_df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build ranker\n",
+    "weights = [0, 1.0, 0, 1.0, 0.6]\n",
+    "ranker = FastRanker(index, weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quorum = quorum = QuorumCandidateGenerator(index, tokenize_fn=tokenize, config=QuorumConfig(activate_if_candidates_lt=1000, target=1000, cap=5000))   \n",
+    "\n",
+    "\n",
+    "searcher = Searcher(index, ranker, quorum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +118,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2000/2000 [01:15<00:00, 26.64it/s]"
+      "100%|██████████| 2000/2000 [01:21<00:00, 24.58it/s]"
      ]
     },
     {
@@ -103,8 +127,8 @@
      "text": [
       "\n",
       "Result Metrics:\n",
-      "MRR@10:  0.5784\n",
-      "NDCG@10: 0.6212\n"
+      "MRR@10:  0.6048\n",
+      "NDCG@10: 0.6479\n"
      ]
     },
     {
