quorum pipeline research

--- a/hw3/notebooks/baseline_metrics.ipynb
+++ b/hw3/notebooks/baseline_metrics.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 101937/101937 [01:28<00:00, 1158.25it/s]\n"
+      "100%|██████████| 101937/101937 [01:38<00:00, 1032.85it/s]\n"
      ]
     }
    ],
@@ -91,44 +91,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**big quorum**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "quorum = quorum = QuorumCandidateGenerator(index, tokenize_fn=tokenize, config=QuorumConfig(activate_if_candidates_lt=1000, target=1000, cap=5000))   \n",
+    "# build quorum\n",
+    "cfg = QuorumConfig(\n",
+    "    activate_if_candidates_lt=2000,\n",
+    "    target=5000,\n",
+    "    cap=50000,\n",
+    "    anchor_pool=8,\n",
+    "    max_df_frac=0.2,\n",
+    "    k_frac=0.35,\n",
+    "    min_k=2,\n",
+    "    max_universe=200000\n",
+    "    )\n",
     "\n",
-    "\n",
+    "quorum = QuorumCandidateGenerator(index, tokenize_fn=tokenize, config=cfg)   \n",
     "searcher = Searcher(index, ranker, quorum)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Evaluating...\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2000/2000 [01:21<00:00, 24.58it/s]"
+      "Evaluating: 100%|██████████| 2000/2000 [03:05<00:00, 10.80it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Result Metrics:\n",
-      "MRR@10:  0.6048\n",
-      "NDCG@10: 0.6479\n"
+      "MRR@1: 0.5115\n",
+      "NDCG@1: 0.5115\n",
+      "MRR@10: 0.6052\n",
+      "NDCG@10: 0.6487\n",
+      "MRR@100: 0.6094\n",
+      "NDCG@100: 0.6688\n"
      ]
     },
     {
@@ -140,26 +152,67 @@
     }
    ],
    "source": [
-    "mrr_scores = []\n",
-    "ndcg_scores = []\n",
+    "scores = aux.eval_ranking(searcher, queries_df, qrels, int_to_str_id, ks=(1, 10, 100))\n",
+    "for k, v in scores.items():\n",
+    "    print(f\"{k}: {v:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Small quorum**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build quorum\n",
+    "cfg = QuorumConfig(activate_if_candidates_lt=1000, target=1000, cap=5000)\n",
     "\n",
-    "print(\"Evaluating...\")\n",
-    "for _, row in tqdm(queries_df.iterrows(), total=len(queries_df)):\n",
-    "    qid, text = row[\"query_id\"], row[\"text\"]\n",
-    "    \n",
-    "    if qid not in qrels: continue\n",
-    "    targets = qrels[qid]\n",
-    "    \n",
-    "    results_int = [doc_id for doc_id, _ in searcher.search(text)]\n",
-    "    \n",
-    "    results_str = [int_to_str_id[i] for i in results_int]\n",
-    "    \n",
-    "    mrr_scores.append(metrics.mrr(results_str, targets, k=10))\n",
-    "    ndcg_scores.append(metrics.ndcg(results_str, targets, k=10))\n",
-    "\n",
-    "print(f\"\\nResult Metrics:\")\n",
-    "print(f\"MRR@10:  {np.mean(mrr_scores):.4f}\")\n",
-    "print(f\"NDCG@10: {np.mean(ndcg_scores):.4f}\")"
+    "quorum = QuorumCandidateGenerator(index, tokenize_fn=tokenize, config=cfg)   \n",
+    "searcher = Searcher(index, ranker, quorum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating: 100%|██████████| 2000/2000 [01:36<00:00, 20.71it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MRR@1: 0.5115\n",
+      "NDCG@1: 0.5115\n",
+      "MRR@10: 0.6048\n",
+      "NDCG@10: 0.6479\n",
+      "MRR@100: 0.6089\n",
+      "NDCG@100: 0.6668\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = aux.eval_ranking(searcher, queries_df, qrels, int_to_str_id, ks=(1, 10, 100))\n",
+    "for k, v in scores.items():\n",
+    "    print(f\"{k}: {v:.4f}\")\n"
    ]
   },
   {
