--- a/hw3/notebooks/old_recall1000.ipynb
+++ b/hw3/notebooks/old_recall1000.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "        target = next(iter(qrels[qid]))\n",
     "\n",
-    "        cand = searcher.candidates(text)  # Set[int]\n",
+    "        cand = searcher.candidates(text)\n",
     "        cand_sizes.append(len(cand))\n",
     "\n",
     "        cand_str = {int_to_str_id[i] for i in cand}\n",
@@ -101,8 +101,40 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 101937/101937 [01:35<00:00, 1063.70it/s]\n",
-      "Recall@1000 (candidates): 100%|██████████| 2000/2000 [01:03<00:00, 31.49it/s]"
+      "100%|██████████| 101937/101937 [01:28<00:00, 1154.93it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from minisearch.fast_ranking import FastRanker\n",
+    "from minisearch.quorum import QuorumCandidateGenerator, QuorumConfig\n",
+    "from minisearch.index import tokenize\n",
+    "\n",
+    "# build index\n",
+    "docs_df, queries_df, qrels = aux.load_data()\n",
+    "index, int_to_str_id = aux.build_index(docs_df)\n",
+    "\n",
+    "# build ranker\n",
+    "weights = [0, 1.0, 0, 1.0, 0.6]\n",
+    "ranker = FastRanker(index, weights)\n",
+    "\n",
+    "# build quorym\n",
+    "quorum = QuorumCandidateGenerator(index, tokenize_fn=tokenize, config=QuorumConfig(activate_if_candidates_lt=1000, target=1000, cap=5000))   \n",
+    "\n",
+    "# buold searcher\n",
+    "searcher = Searcher(index, ranker, quorum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Recall@1000 (candidates): 100%|██████████| 2000/2000 [01:00<00:00, 33.29it/s]"
      ]
     },
     {
@@ -127,17 +159,12 @@
        "0.8765"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "docs_df, queries_df, qrels = aux.load_data()\n",
-    "index, int_to_str_id = aux.build_index(docs_df)\n",
-    "\n",
-    "searcher = Searcher(index, [0.0, 1.0])\n",
-    "\n",
     "recall_at_candidates(queries_df, qrels, searcher, int_to_str_id, k=1000)\n"
    ]
   },
