--- a/hw3/notebooks/baseline_metrics.ipynb
+++ b/hw3/notebooks/baseline_metrics.ipynb
@@ -216,6 +216,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**R2 model**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2000/2000 [03:22<00:00,  9.87it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MRR@1: 0.6055\n",
+      "MRR@10: 0.6759392857142857\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sentence_transformers import CrossEncoder\n",
+    "ce = CrossEncoder(\"cross-encoder/ms-marco-MiniLM-L-6-v2\")\n",
+    "\n",
+    "doc_text = aux.make_doc_text_map(docs_df, id_col=\"doc_id\", text_col=\"body\")\n",
+    "\n",
+    "mrr1 = []\n",
+    "mrr10 = []\n",
+    "from tqdm import tqdm\n",
+    "import numpy as np\n",
+    "import metrics\n",
+    "\n",
+    "for _, row in tqdm(queries_df.iterrows(), total=len(queries_df)):\n",
+    "    qid = int(row[\"query_id\"])\n",
+    "    if qid not in qrels:\n",
+    "        continue\n",
+    "    text = row[\"text\"]\n",
+    "    targets = qrels[qid]\n",
+    "\n",
+    "    results_int = [doc_id for doc_id, _ in searcher.search(text, top_k=100)]\n",
+    "    results_int = aux.rerank_with_cross_encoder(searcher, text, results_int, int_to_str_id, doc_text, ce, rerank_k=10)\n",
+    "\n",
+    "    results_str = [int_to_str_id[i] for i in results_int]\n",
+    "    mrr1.append(metrics.mrr(results_str, targets, k=1))\n",
+    "    mrr10.append(metrics.mrr(results_str, targets, k=10))\n",
+    "\n",
+    "print(\"MRR@1:\", float(np.mean(mrr1)))\n",
+    "print(\"MRR@10:\", float(np.mean(mrr10)))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
