add dummy quorum

--- a/hw3/notebooks/baseline_metrics.ipynb
+++ b/hw3/notebooks/baseline_metrics.ipynb
@@ -69,7 +69,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 101937/101937 [01:38<00:00, 1032.85it/s]\n"
+      "100%|██████████| 101937/101937 [01:25<00:00, 1187.51it/s]\n"
      ]
     }
    ],
@@ -219,6 +219,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**dummy quorum**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build quorum\n",
+    "cfg = QuorumConfig(activate_if_candidates_lt=1000, target=50, cap=2000)\n",
+    "\n",
+    "quorum = QuorumCandidateGenerator(index, tokenize_fn=tokenize, config=cfg)   \n",
+    "searcher = Searcher(index, ranker, quorum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating: 100%|██████████| 2000/2000 [01:07<00:00, 29.60it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MRR@1: 0.4920\n",
+      "NDCG@1: 0.4920\n",
+      "MRR@10: 0.5641\n",
+      "NDCG@10: 0.5939\n",
+      "MRR@100: 0.5649\n",
+      "NDCG@100: 0.5972\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = aux.eval_ranking(searcher, queries_df, qrels, int_to_str_id, ks=(1, 10, 100))\n",
+    "for k, v in scores.items():\n",
+    "    print(f\"{k}: {v:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**R2 model**"
    ]
   },
@@ -279,13 +337,6 @@
     "print(\"MRR@1:\", float(np.mean(mrr1)))\n",
     "print(\"MRR@10:\", float(np.mean(mrr10)))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
