--- a/hw3/notebooks/quorum_reasearch.ipynb
+++ b/hw3/notebooks/quorum_reasearch.ipynb
@@ -332,7 +332,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "base_k = replace(base, target=5000)\n",
+    "df_activate = sweep(\n",
+    "    base_k, \"activate_if_candidates_lt\", \"activate_if_candidates_lt\",\n",
+    "    [200, 500, 1000, 2000, 5000],\n",
+    "    index, queries_df, qrels, int_to_str_id\n",
+    ")\n",
+    "plot_sweep(df_activate, \"Sweep activate_if_candidates_lt\")\n"
+   ]
   }
  ],
  "metadata": {
