--- a/hw3/notebooks/baseline_metrics.ipynb
+++ b/hw3/notebooks/baseline_metrics.ipynb
@@ -94,6 +94,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***QUORUM RESEARCH***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**big quorum**"
    ]
   },
@@ -277,6 +284,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***L2 RESEARCH***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**R2 model**"
    ]
   },
@@ -337,6 +351,158 @@
     "print(\"MRR@1:\", float(np.mean(mrr1)))\n",
     "print(\"MRR@10:\", float(np.mean(mrr10)))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***PROXIMATY RESEARCH***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Proximity add**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build ranker\n",
+    "weights = [0, 1.0, 0, 1.0, 3.0]\n",
+    "ranker = FastRanker(index, weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build quorum\n",
+    "cfg = QuorumConfig(activate_if_candidates_lt=1000, target=1000, cap=5000)\n",
+    "\n",
+    "quorum = QuorumCandidateGenerator(index, tokenize_fn=tokenize, config=cfg)   \n",
+    "searcher = Searcher(index, ranker, quorum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating: 100%|██████████| 2000/2000 [01:21<00:00, 24.55it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MRR@1: 0.5145\n",
+      "NDCG@1: 0.5145\n",
+      "MRR@10: 0.6085\n",
+      "NDCG@10: 0.6514\n",
+      "MRR@100: 0.6124\n",
+      "NDCG@100: 0.6696\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = aux.eval_ranking(searcher, queries_df, qrels, int_to_str_id, ks=(1, 10, 100))\n",
+    "for k, v in scores.items():\n",
+    "    print(f\"{k}: {v:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Without proximaty**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build ranker\n",
+    "weights = [0, 1.0, 0.0, 1.0, 0.0]\n",
+    "ranker = FastRanker(index, weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build quorum\n",
+    "cfg = QuorumConfig(activate_if_candidates_lt=1000, target=1000, cap=5000)\n",
+    "\n",
+    "quorum = QuorumCandidateGenerator(index, tokenize_fn=tokenize, config=cfg)   \n",
+    "searcher = Searcher(index, ranker, quorum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating: 100%|██████████| 2000/2000 [01:08<00:00, 29.41it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MRR@1: 0.5085\n",
+      "NDCG@1: 0.5085\n",
+      "MRR@10: 0.6017\n",
+      "NDCG@10: 0.6449\n",
+      "MRR@100: 0.6059\n",
+      "NDCG@100: 0.6641\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = aux.eval_ranking(searcher, queries_df, qrels, int_to_str_id, ks=(1, 10, 100))\n",
+    "for k, v in scores.items():\n",
+    "    print(f\"{k}: {v:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
